# j-image-segmenter

./: CMakeLists.txt
input/: Thumbs.db
source/: image_segmenter.cpp  image_segmenter.h  main.cpp  segment.h  serialize_template_specializations.h  sort_permutation.h  utility.h
test/: image-segmenter-tests.cpp  image-segmenter-tests.h  segment-tests.cpp  segment-tests.h
